2005-12-20  Ulrich Drepper  <drepper@redhat.com>

	* resolv/res_hconf.c (cmd): Mark as const.
	(parse_line): Mark c as pointer to const.

	* misc/getusershell.c (initshells): Remove unnecessary tests.
	(endusershell): Likewise.
	(okshells): Mark as const.

	* sysdeps/posix/gai_strerror.c: Complete rewrite. Avoid relocations.
	* sysdeps/posix/gai_strerror-strs.h: New file.
	* sysdeps/posix/Dist: New file.

	* sysdeps/posix/getaddrinfo.c (gaih): Mark as const.
	* locale/loadlocale.c (_nl_value_types): Likewise.
	* iconv/gconv_conf.c (builtin_aliases): Likewise.
	* iconv/gconv_open.c (internal_trans_names): Likewise.

2005-12-19  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/unix/sysv/linux/sh/sysdep.h: Include tls.h.
	(PTR_MANGLE, PTR_DEMANGLE): Define.
	(SYSCALL_ERROR_HANDLER): Fix typo.
	* sysdeps/sh/sh4/__longjmp.S: Use PTR_DEMANGLE if defined.
	* sysdeps/sh/sh3/__longjmp.S: Likewise.
	* sysdeps/sh/sh4/setjmp.S: Use PTR_MANGLE if defined.
	* sysdeps/sh/sh3/setjmp.S: Likewise.

2005-12-20  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/ia64/fpu/libm-test-ulps: Update for GCC 4.1 prerelease.

	* sysdeps/unix/sysv/linux/time.c: If __NR_time is not defined,
	use sysdeps/unix/time.c implementation.

2005-12-19  Ulrich Drepper  <drepper@redhat.com>

	[BZ #1955]
	* timezone/zic.c (tofile;): Fix typo in symlink creation.
	Patch by Phil Estes <pestes@us.ibm.com>.

	[BZ #1952]
	* sysdeps/unix/sysv/linux/time.c: New file.
	* sysdeps/unix/sysv/linux/i386/syscalls.list: Remove time entry.

2005-12-15  Thomas Schwinge  <tschwinge@gnu.org>

	* io/xmknodat.c: Include <stddef.h>.
	* misc/futimesat.c: Remove weak_alias and correct stub_warning.
	* stdio-common/renameat.c (renameat): Fix typo.

2005-12-16  Thorsten Kukuk  <kukuk@suse.de>

	[BZ #1978]
	* sysdeps/unix/sysv/linux/internal_statvfs.c (__statvfs_getflags):
	Map more filesystem types to a string.
	* sysdeps/unix/sysv/linux/linux_fsinfo.h: Add SYSFS_MAGIC.

2005-12-19  Jakub Jelinek  <jakub@redhat.com>
